--- a/01_client.ipynb
+++ b/01_client.ipynb
@@ -13,9 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
+    "# Client\n",
     "\n",
-    "> API details."
+    "> Client API details."
    ]
   },
   {
